# ecsimcorr

./: .clang-format  .gitignore  README.md  build.py  configure.py  gen_config.py  globalFunctions.time  run.sh  run_stark.sh  set_params.py  set_params_symplectic_test.py  start.sh  test.py
PlotScripts/: GetMovies.sh  LibPlot.py  PlotXZ.py  ReadDataLib.py  ReadParams.py  VideoPlot.sh  VideoPlot2D.py  VideoPlot2D1.sh  VideoPlot2DR.py  VideoPlot2DRR.py  VideoPlot2DSelect.py  VideoPlot2DXY.py  VideoPlot2DXZ.py  VideoPlotBz.py  VideoPlotCenter.py  VideoPlotR.py  VideoPlotR3.py  plot.py  process_spectrum.py  testFFT.py
Scripts/: setInitParams.py
srcBeren/: CMakeLists.txt  main.cpp  timer.h
srcBeren/Beren3D/: Beren3D.cpp  Makefile_cpu
srcBeren/Constants/: bounds.h  phys.par
srcBeren/Diagnostics/: Diagnostic.cpp  Diagnostic.h  DiagnosticEnergy.cpp
srcBeren/Fields/: Damping.cpp  Damping.h  Mesh.cpp  Mesh.h  operators.cpp  solverSLE.cpp  solverSLE.h
srcBeren/Particles/: Particles.cpp  Particles.h  ParticlesDistribution.cpp  ParticlesSources.cpp
srcBeren/Utils/: Read.cpp  Vec.h  World.cpp  World.h  util.h
srcBeren/algorithms/: boris_pusher.h  decompose_esirkepov_current.h  interpolation.h  stencils.h
srcBeren/constants/: const.h  defines.h  phys.par
srcBeren/diagnostics/: CMakeLists.txt  Diagnostic.cpp  Diagnostic.h  DiagnosticEnergy.cpp  DiagnosticFields.cpp  DiagnosticParticles.cpp  Timer.cpp  Timer.h  Tracker.h
srcBeren/fields/: CMakeLists.txt  Coil.cpp  Coil.h  Damping.cpp  Damping.h  Mesh.cpp  Mesh.h  SolverFDTD.cpp  SolverFDTD.h  SolverFDTD_PML.cpp  SolverFDTD_PML.h  external_fieldsB.cpp  external_fieldsB.h  external_fieldsE.cpp  external_fieldsE.h  magnetic_mirror.cpp  magnetic_mirror.h  operators.cpp  operators.h  operatorsLapenta.cpp  pmms.hpp  set_params.py  solverSLE.cpp  solverSLE.h  stencils.cpp
srcBeren/include/: config.h  types.h
srcBeren/particles/: CMakeLists.txt  Particle.h  Particles.cpp  Particles.h  ParticlesArray.cpp  ParticlesArray.h  ParticlesCollisions.cpp  ParticlesCollisions.h  ParticlesCore.cpp  ParticlesDiagnostic.cpp  ParticlesDiagnostic.h  ParticlesDistribution.cpp  ParticlesKernel.cpp  ParticlesMethods.cpp  ParticlesSources.cpp  Shape.h  TestParticles.cpp  collision.cpp  collision.h  particles_distribution_collection.cpp  particles_distribution_collection.h
srcBeren/simulation/: CMakeLists.txt  main.cpp  recovery.cpp  recovery.h  simulation.cpp  simulation.h  simulation_init.cpp  simulation_parameters.cpp  simulation_parameters.h
srcBeren/simulation/ecsim/: CMakeLists.txt  algorithms_ecsim.cpp  algorithms_ecsim.h  simulation_ecsim.cpp  simulation_ecsim.h
srcBeren/simulation/ecsim_corr/: CMakeLists.txt  algorithms_ecsim_corr.cpp  simulation_ecsim_corr.cpp  simulation_ecsim_corr.h
srcBeren/simulationEcsim/: CMakeLists.txt  main.cpp  simulation_ecsim_corr.cpp  simulation_ecsim_corr.h
srcBeren/simulationImplicit/: CMakeLists.txt  main.cpp  simulation_implicit.cpp  simulation_implicit.h
srcBeren/simulationSymplectic/: CMakeLists.txt  main.cpp  particles_symplectic.cpp  particles_symplectic.h  simulation_symplectic.cpp  simulation_symplectic.h
srcBeren/testCircle/: Makefile_cpu  main.cpp  recovery.cpp  simulation.cpp  simulation.h  simulation_init.cpp  simulation_output.cpp
srcBeren/testCircle2/: CMakeLists.txt  recovery.h  set_params.py  simulation.cpp  simulation.h
srcBeren/testCollision/: set_params.py  simulation.cpp  simulation.h  simulation_init.cpp  simulation_output.cpp
srcBeren/testImplicit/: CMakeLists.txt  configure.py  simulation.cpp  simulation_mirror_test.cpp  simulation_track_test.cpp
srcBeren/testTrap/: simulation.cpp  simulation.h  simulation_init.cpp
srcBeren/tests/: CMakeLists.txt  sort_tests.cpp
srcBeren/tests/collision/: CMakeLists.txt  main.cpp  test_config.json  vis_neutral_density.py
srcBeren/tests/tracking/: CMakeLists.txt  main.cpp  test_track_in_fieldB.cpp  test_track_in_fieldB.h
srcBeren/tests/unit/: CMakeLists.txt  domain.cpp
srcBeren/utils/: CMakeLists.txt  Read.cpp  Read.h  Vec.h  World.cpp  World.h  a.out  bmatrix.cpp  bmatrix.h  boundary_conditions.cpp  boundary_conditions.h  containers.h  indexing.h  output_util.cpp  output_util.h  parameters_map.cpp  parameters_map.h  random_generator.h  service.cpp  service.h  sgs.h  sparse.cpp  sparse.h  timer.cpp  timer.h  util.cpp  util.h  vector2.h  vector3.h  voxel_traversal.cpp  voxel_traversal.h
srcBeren/vahedi_surendra_advance/: CMakeLists.txt  collision_handler.cpp  collision_utils.cpp  collision_utils.h  collisions_with_neutrals.cpp  collisions_with_neutrals.h  cross_section.cpp  cross_section.h  cross_section.hpp
srcBeren/vahedi_surendra_advance/clsVec/: CMakeLists.txt  clsVec.cpp  clsVec.hpp
srcBeren/vahedi_surendra_advance/collision_handler/: CMakeLists.txt  collision_handler.cpp  collision_handler.hpp
srcBeren/vahedi_surendra_advance/collision_processing/: CMakeLists.txt  collision_processing.cpp  collision_processing.h  collision_processing.hpp
srcBeren/vahedi_surendra_advance/cross_section/: CMakeLists.txt  cross_section.cpp  cross_section.hpp
srcBeren/vahedi_surendra_advance/utils/: CMakeLists.txt  utils.cpp  utils.hpp
utils/: berenUtils.py
